--- a/02-PyTorch-Basics-Exercises.ipynb
+++ b/02-PyTorch-Basics-Exercises.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "import torch\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -45,10 +46,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x2199d4586f0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "seed = 42\n",
+    "np.random.seed(seed)\n",
+    "torch.manual_seed(seed)\n"
    ]
   },
   {
@@ -60,12 +74,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 4 2 4 4 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "\n",
+    "arr = np.random.randint(0, 5, size=6)\n",
+    "print(arr)"
    ]
   },
   {
@@ -94,12 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3, 4, 2, 4, 4, 1], dtype=torch.int32)\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "x = torch.tensor(arr, dtype=torch.int32)\n",
+    "print(x)\n"
    ]
   },
   {
@@ -129,12 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3, 4, 2, 4, 4, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "\n",
+    "x = x.type(torch.int64)\n",
+    "print(x)"
    ]
   },
   {
@@ -164,12 +207,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[3, 4],\n",
+      "        [2, 4],\n",
+      "        [4, 1]])\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "x = x.view(3, 2)\n",
+    "print(x)\n"
    ]
   },
   {
@@ -200,12 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[4],\n",
+      "        [4],\n",
+      "        [1]])\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "\n",
+    "right_column = x[:, 1].unsqueeze(1) \n",
+    "print(right_column)"
    ]
   },
   {
@@ -237,12 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 9, 16],\n",
+      "        [ 4, 16],\n",
+      "        [16,  1]])\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "x_squared = x ** 2\n",
+    "print(x_squared)\n"
    ]
   },
   {
@@ -275,12 +352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2, 2, 1],\n",
+      "        [4, 1, 0]])\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "\n",
+    "y = torch.randint(0, 5, (2, 3), dtype=torch.int64)\n",
+    "print(y)"
    ]
   },
   {
@@ -310,12 +398,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[22, 10,  3],\n",
+      "        [20,  8,  2],\n",
+      "        [12,  9,  4]])\n"
+     ]
+    }
+   ],
    "source": [
     "# CODE HERE\n",
-    "\n"
+    "\n",
+    "result = torch.matmul(x, y)\n",
+    "print(result)"
    ]
   },
   {
@@ -347,7 +447,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dl",
    "language": "python",
    "name": "python3"
   },
@@ -361,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
